# libloc

./: .gitignore  Jenkinsfile  Makefile.am  README.md  autogen.sh  configure.ac
bash-completion/: location
debian/: .gitignore  build.sh  changelog  control  copyright  genchangelog.sh  gensymbols.sh  libloc-dev.install  libloc.install  libloc.lintian-overrides  libloc.manpages  libloc0.install  libloc1.install  libloc1.symbols  location-importer.install  location-perl.install  location-python.install  location.install  location.manpages  location.postinst  location.postrm  lua-location.install  python3-location.examples  rules  watch
examples/: private-key.pem  public-key.pem
examples/python/: create-database.py  read-database.py
m4/: ax_prog_lua_modules.m4
man/: .gitignore  asciidoc.conf  libloc.txt  location-downloader.txt  location-query.txt  location.txt
po/: .gitignore  LINGUAS  POTFILES.in  de.po  ka.po  libloc.pot
src/: .gitignore  address.c  as-list.c  as.c  as.h  country-list.c  country.c  database.c  database.h  libloc.c  libloc.pc.in  libloc.sym  network-list.c  network-tree.c  network.c  resolv.c  stringpool.c  stringpool.h  test-as.c  test-country.c  test-database.c  test-libloc.c  test-network-list.c  test-network.c  test-signature.c  test-stringpool.c  writer.c
src/libloc/: address.h  compat.h  database.h  format.h  libloc.h  network-list.h  network.h  private.h
src/loc/: as.h  country.h  database.h  format.h  libloc.h  network-list.h  network.h  private.h  resolv.h  writer.h
src/lua/: country.c  database.c  location.c  location.h  network.c  network.h
src/perl/: Location.xs  MANIFEST  Makefile.PL  typemap
src/perl/Location/: .gitignore  Changes  Location.xs  MANIFEST  README
src/perl/lib/: Location.pm
src/perl/t/: Location.t
src/python/: __init__.py  as.c  as.h  country.c  database.c  database.h  database.py  downloader.py  export.py  importer.py  location-downloader.in  location-exporter.in  location-importer.in  location-query  location-query.in  location.in  locationmodule.c  locationmodule.h  logger.py  network.c  network.h  writer.c
src/python/location/: __init__.py  database.py  downloader.py  export.py  importer.py  logger.py
src/scripts/: location-importer.in  location.in
src/systemd/: location-downloader.service.in  location-downloader.timer.in  location-update.service.in  location-update.timer.in
testdata/: Readme.txt  test.db
tests/lua/: main.lua  main.lua.in
tests/python/: networks-dedup.py  test-database.py  test-export.py
